--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: 薛定谔的水货
 </header>
 
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="190">
-    <polygon points="125,151 272,151"
+    <polyline points="125,151 272,151"
     style="fill:#725B21;stroke:#725B21;stroke-width:1" />
-    <polygon points="148,129 148,222"
+    <polyline points="148,129 148,222"
     style="fill:#725B21;stroke:#725B21;stroke-width:1" />
 </svg>
 
