--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ title: 薛定谔的水货
                    <!-- <polyline points="95,86 95,72 900,72" -->
                <!-- style="fill:rgba(0,0,0,0);stroke:#B1A7A7;stroke-width:1"/> -->
                    <span class="home-post-title">{{post.title}}</span>
+                   <span class="home-post-vertical-line"></span>
+                   <span class="home-post-horizontal-line"></span>
                </a>
                <!-- </svg> -->
                    
