修改文章字体

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: 薛定谔的水货
 ---
 
-<header class="home-header" style="background-image: url('{{ site.baseurl }}/assets/home/header_background.png');height: 800px;">
+<header class="home-header" style="background-image: url('{{ site.baseurl }}/assets/home/header_background.png');">
     <div>
         <h1 class="home-title">P E R S O N A L   B L O G</h1>
     </div>
